# 3D-Reconstruction-of-Human-using-Kinect-v2-and-PCL

./: README.md
Drafts-Testing/3D_Scanner/: 3D_Scanner.pro  centralwidget.cpp  centralwidget.h  cloudDisplay.h  clouddisplay.cpp  cloudregister.cpp  cloudregister.h  main.cpp  mainwindow.cpp  mainwindow.h  screensetup.h  toolsandoptions.cpp  toolsandoptions.h
Drafts-Testing/ICP-1/: CMakeLists.txt  ICP_hassan.pro  main.cpp
Drafts-Testing/ICP-2/: pairwise_incremental_registration.cpp
Drafts-Testing/Kinect/: Kinect.pro  kinect2_grabber.h  main.cpp
Drafts-Testing/Registration-Final/src/: CMakeLists.txt  CMakeLists.txt~  Registration.pro  cfilter.cpp  cfilter.h  cinout.cpp  cinout.h  main.cpp  regmesh.cpp  regmesh.h
Drafts-Testing/read-segment-vis/: CMakeLists.txt  main.cpp
Final-Point-Clouds/: FinalResult_Gopi_xyz.pcd
build-vtk-Desktop_Qt_5_9_0_MinGW_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.vtk.Debug  object_script.vtk.Release  ui_mainwindow.h
vtk/: cfilter.cpp  cfilter.h  filegrabber.cpp  filegrabber.h  kinect2_grabber.cpp  kinect2_grabber.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myvtkwidget.cpp  myvtkwidget.h  regmesh.cpp  regmesh.h  vtk.pro  vtk.pro.user.6096680  vtk.pro.user.89b9e25
vtk-beta/: cfilter.cpp  cfilter.h  cinout.h  filegrabber.cpp  filegrabber.h  kinect2_grabber.cpp  kinect2_grabber.h  main.cpp  mainwindow.ui  myvtkwidget.cpp  myvtkwidget.h  regmesh.cpp  regmesh.h  vtk.pro  vtk.pro.user.6096680  widget.h
vtk/data/: All_Meshing_TEchniques.cpp  cfcloud0.pcd  cfcloud1.pcd  cfcloud2.pcd  cfcloud3.pcd  cfcloud4.pcd  cfcloud5.pcd  cfcloud6.pcd  cfcloud7.pcd  (+1 more)
